# cardano-zkvms

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: CD.yml  CI.yml
conf/: .env.example  Caddyfile.template  cardano-zkvms.service.template
crates/uplc/: Cargo.toml
crates/uplc/src/: lib.rs
crates/uplc/src/impls/: mod.rs  uplc_aiken.rs  uplc_turbo.rs
crates/zkvms/openvm/: Cargo.toml
crates/zkvms/openvm/core/: Cargo.toml
crates/zkvms/openvm/core/src/: lib.rs
crates/zkvms/openvm/data/: input.json  input_empty.json  input_garbage.json  input_invalid_uplc.json  input_web.json
crates/zkvms/openvm/guest/: Cargo.toml
crates/zkvms/openvm/guest/src/: main.rs
crates/zkvms/openvm/mcu/: Cargo.toml
crates/zkvms/openvm/mcu/boards/common/: ratatui_ui.rs
crates/zkvms/openvm/mcu/boards/esp32s3/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
crates/zkvms/openvm/mcu/boards/esp32s3/src/: ble.rs  main.rs  screen.rs  status.rs
crates/zkvms/openvm/mcu/boards/rp2350/: Cargo.toml  README.md  build.rs  memory.x  rp2350-image.x
crates/zkvms/openvm/mcu/boards/rp2350/ble/: Cargo.toml  build.rs
crates/zkvms/openvm/mcu/boards/rp2350/ble/src/: main.rs
crates/zkvms/openvm/mcu/boards/rp2350/src/: ble.rs  main.rs  proof_app.rs  tufty_display.rs  ui.rs
crates/zkvms/openvm/mcu/device-app/: Cargo.toml
crates/zkvms/openvm/mcu/device-app/src/: lib.rs  transfer.rs
crates/zkvms/openvm/mcu/host-tools/: Cargo.toml
crates/zkvms/openvm/mcu/verifier-core/: Cargo.toml
crates/zkvms/openvm/mcu/verifier-core/src/: halo2_compact.rs  halo2_portable.rs  lib.rs  protocol.rs
crates/zkvms/openvm/verify/: Cargo.toml
crates/zkvms/openvm/verify/patches/tikv-jemalloc-sys/: Cargo.toml
crates/zkvms/openvm/verify/patches/tikv-jemalloc-sys/src/: lib.rs
crates/zkvms/openvm/verify/patches/tikv-jemallocator/: Cargo.toml
crates/zkvms/openvm/verify/patches/tikv-jemallocator/src/: lib.rs
crates/zkvms/openvm/verify/src/: error.rs  hasher.rs  lib.rs  main.rs  public_values.rs  types.rs  verifier.rs
scripts/: build-backend-remote.sh  deploy.sh  setup.sh  teardown.sh
web/: esbuild.config.js  index.html  package-lock.json  package.json  test-verify.mjs
web/assets/: aiken-highlight.js  config.js  index.js  proof-utils.js  style.css  uplc-highlight.js
web/conf/: .env.example  Caddyfile.template  cardano-zkvms.service.template
web/crates/aiken-wasm/: Cargo.toml  fetch-deps.sh
web/crates/aiken-wasm/src/: lib.rs
web/crates/backend/: Cargo.toml
web/crates/backend/src/: main.rs
web/crates/uplc-wasm/: Cargo.toml
web/crates/uplc-wasm/src/: lib.rs
web/data/: README.md  agg_stark.vk
web/scripts/: build-backend-remote.sh  deploy.sh  setup.sh  teardown.sh
