[package]
name = "uplc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
uplc-aiken = { version = "1.1.21", optional = true, package = "uplc" }
uplc-turbo = { git = "https://github.com/pragma-org/uplc.git", branch = "main", optional = true }
uplc-turbo-riscv = { git = "https://github.com/jeluard/uplc.git", branch = "jeluard/riscv", optional = true, default-features = false, package = "uplc-turbo" }

[features]
default = ["uplc-turbo-riscv"]
std = ["anyhow/std", "hex/std", "thiserror/std"]
uplc-aiken = ["dep:uplc-aiken", "std"]
uplc-turbo = ["dep:uplc-turbo"]
uplc-turbo-riscv = ["dep:uplc-turbo-riscv"]