[package]
name = "openvm-guest"
version = "0.1.0"
edition = "2024"

[features]
std = []
uplc-aiken = ["uplc/uplc-aiken"]
uplc-turbo = ["uplc/uplc-turbo"]
uplc-turbo-riscv = ["uplc/uplc-turbo-riscv"]
default = ["uplc-turbo-riscv"]

[dependencies]
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
anyhow = { version = "1.0", default-features = false }
openvm = { git = "https://github.com/openvm-org/openvm", tag = "v1.4.3", features = ["std"]  }
uplc = { path = "../../uplc", default-features = false }