[package]
name = "cardano-zkvms"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cardano-zkvms"
path = "src/main.rs"

[workspace]

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
