[package]
name = "uplc-wasm"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
console_error_panic_hook = "0.1"
uplc-turbo = { git = "https://github.com/jeluard/uplc.git", branch = "jeluard/riscv", default-features = false, features = ["std"] }

[profile.release]
opt-level = "s"
lto = true
