[workspace]
members = [
    "verifier-core",
    "device-app",
    "host-tools",
    "boards/rp2350",
    "boards/esp32s3",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
openvm-mcu-verifier-core = { path = "verifier-core", default-features = false }
openvm-mcu-device-app = { path = "device-app", default-features = false }

postcard = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10", default-features = false }
halo2curves = { version = "0.9", default-features = false, features = ["derive_serde"] }
openvm-wasm-verifier = { path = "../verify" }
snark-verifier-sdk = { version = "0.2.3", default-features = false, features = ["halo2-axiom", "loader_evm"] }
bincode = { version = "1", default-features = false }
sha3 = { version = "0.10", default-features = false }
halo2-base = { version = "=0.5.0", default-features = false }
hex = "0.4"
serde_json = "1"
