[package]
name = "openvm-wasm-verifier"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for OpenVM STARK proof verification"

# Standalone workspace — built independently via wasm-pack.
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openvm-poseidon2-air = { git = "https://github.com/openvm-org/openvm.git", tag = "v2.0.0-beta.2" }
openvm-stark-backend = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v2.0.0-beta.2", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v2.0.0-beta.2", default-features = false, features = ["cpu-backend"] }
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["hex", "macros"] }
thiserror = "1"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Patches for WASM compatibility (jemalloc stubs)
[patch.crates-io]
tikv-jemalloc-sys = { path = "patches/tikv-jemalloc-sys" }
tikv-jemallocator = { path = "patches/tikv-jemallocator" }

[profile.release]
opt-level = "s"
lto = true
