[package]
name = "openvm-mcu-host-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openvm-mcu-tool"
path = "src/bin/openvm-mcu-tool.rs"

[[bin]]
name = "openvm-mcu-tui"
path = "src/bin/openvm-mcu-tui.rs"

[dependencies]
openvm-mcu-verifier-core = { workspace = true, features = ["halo2-std"] }
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
hex = "0.4"
ratatui = "0.29"
serde.workspace = true
serde_json = "1"
sha2 = { workspace = true }
