[package]
name = "openvm-mcu-esp32s3"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["waveshare-touch-lcd-2"]
display-st7789 = [
    "dep:embedded-graphics",
    "dep:embedded-hal",
    "dep:embedded-hal-bus",
    "dep:mipidsi",
    "dep:mousefood",
    "dep:ratatui",
]
waveshare-touch-lcd-2 = ["display-st7789"]
ble-transfer = ["dep:esp32-nimble"]

[dependencies]
openvm-mcu-device-app.workspace = true
openvm-mcu-verifier-core.workspace = true
embedded-graphics = { version = "0.8", optional = true }
embedded-hal = { version = "1", optional = true }
mousefood = { version = "0.5", optional = true }
mipidsi = { version = "0.10", optional = true }
ratatui = { version = "0.30", default-features = false, optional = true }

[target.'cfg(all(target_arch = "xtensa", not(target_os = "espidf")))'.dependencies]
embassy-executor = { version = "0.7", features = ["task-arena-size-4096"] }
embassy-time = "0.4"
embedded-hal-bus = { version = "0.3", optional = true }
esp-alloc = "0.5"
esp-backtrace = { version = "0.14.2", features = ["esp32s3", "panic-handler", "exception-handler", "println"] }
esp-hal = { version = "0.23.1", features = ["esp32s3"] }
esp-hal-embassy = { version = "0.6", features = ["esp32s3"] }
esp-println = { version = "0.12", features = ["esp32s3", "jtag-serial"], default-features = false }

[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp32-nimble = { version = "0.11.1", optional = true }
openvm-mcu-verifier-core = { workspace = true, features = ["halo2-std"] }

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
