[package]
name = "openvm-mcu-rp2350"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["bare-metal"]
bare-metal = ["cortex-m/critical-section-single-core", "dep:panic-halt"]

[dependencies]
openvm-mcu-device-app.workspace = true
openvm-mcu-verifier-core.workspace = true
embedded-graphics = "0.8"
mousefood = "0.5"
ratatui = { version = "0.30", default-features = false }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { version = "0.7", default-features = false }
cortex-m-rt = "0.7"
embedded-alloc = "0.6"
panic-halt = { version = "0.2", optional = true }
