[package]
name = "tikv-jemalloc-sys"
version = "0.6.1+5.3.0-1-ge13ca993e8ccb9ba9847cc330696e02839f328f7"
edition = "2021"
description = "WASM-compatible stub for tikv-jemalloc-sys"

[features]
default = []
background_threads_runtime_support = []

[build-dependencies]
cc = { version = "1.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
cc = "1.0"
