[workspace]
resolver = "2"

[package]
name = "openvm-mcu-rp2350-ble"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[features]
default = []
skip-cyw43-firmware = []

[dependencies]
openvm-mcu-device-app = { path = "../../../device-app", default-features = false }
openvm-mcu-verifier-core = { path = "../../../verifier-core", default-features = false }
embedded-graphics = "0.8"
mousefood = "0.5"
ratatui = { version = "0.30", default-features = false }

[target.'cfg(target_arch = "arm")'.dependencies]
bt-hci = "0.8.1"
cortex-m = { version = "0.7", default-features = false }
cortex-m-rt = "0.7"
cyw43 = { version = "0.7", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.10", features = ["defmt"] }
defmt = "1.0"
defmt-rtt = "1.0"
embassy-executor = { version = "0.10", default-features = false, features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.10", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xb"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embedded-alloc = "0.6"
heapless = "0.9"
panic-probe = { version = "1.0", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2"
trouble-host = { version = "0.6", features = ["defmt", "default-packet-pool-mtu-251", "default-packet-pool-size-64", "l2cap-tx-queue-size-32"] }

[profile.release]
debug = 2
